Correct alignment

--- a/less/styles.less
+++ b/less/styles.less
@@ -411,6 +411,7 @@ form {
         width: 550px;
         margin-top: -300px;
         margin-left: -275px;
+        text-align: left;
 
         &:after {
             content: '';
